WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164888
REGRESSION(
r200964
): Tab focus navigation is broken on results.en.voyages-sncf.com
https://bugs.webkit.org/show_bug.cgi?id=164888
Summary
REGRESSION(r200964): Tab focus navigation is broken on results.en.voyages-snc...
Ryosuke Niwa
Reported
2016-11-17 14:13:35 PST
Keyboard navigation is impossible with Safari Technology Preview that uses svg graphics. Steps to Reproduce: Open
http://results.en.voyages-sncf.com/
Focus the "from" field Press "tab" to focus the next element, the "empty field" button Press "tab" to focus the next element, the "To" field Expected Results: Focus is on the "To" field Actual Results: Focus is on the "Show bookmarks” button
Attachments
Fixes the bug
(9.07 KB, patch)
2016-11-17 14:47 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the bug
(9.83 KB, patch)
2016-11-17 14:48 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-yosemite
(1.10 MB, application/zip)
2016-11-17 15:47 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(1.19 MB, application/zip)
2016-11-17 15:51 PST
,
Build Bot
no flags
Details
Added missing waitUntilDone
(10.03 KB, patch)
2016-11-17 15:54 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(
deleted
)
2016-11-17 17:17 PST
,
Build Bot
no flags
Details
Skip the tests on iOS
(11.03 KB, patch)
2016-11-17 19:12 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2016-11-17 14:47:32 PST
Created
attachment 295090
[details]
Fixes the bug
Ryosuke Niwa
Comment 2
2016-11-17 14:48:53 PST
Created
attachment 295091
[details]
Fixes the bug
Ryosuke Niwa
Comment 3
2016-11-17 14:56:59 PST
<
rdar://problem/28715984
>
Build Bot
Comment 4
2016-11-17 15:47:51 PST
Comment on
attachment 295091
[details]
Fixes the bug
Attachment 295091
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2533675
New failing tests: fast/shadow-dom/focus-navigation-passes-shadow-host.html fast/shadow-dom/focus-navigation-out-of-slot.html fast/shadow-dom/focus-navigation-passes-svg-use-element.html
Build Bot
Comment 5
2016-11-17 15:47:54 PST
Created
attachment 295098
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6
2016-11-17 15:51:30 PST
Comment on
attachment 295091
[details]
Fixes the bug
Attachment 295091
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2533681
New failing tests: fast/shadow-dom/focus-navigation-passes-shadow-host.html fast/shadow-dom/focus-navigation-out-of-slot.html fast/shadow-dom/focus-navigation-passes-svg-use-element.html
Build Bot
Comment 7
2016-11-17 15:51:34 PST
Created
attachment 295100
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Ryosuke Niwa
Comment 8
2016-11-17 15:54:02 PST
Created
attachment 295101
[details]
Added missing waitUntilDone
Build Bot
Comment 9
2016-11-17 17:17:53 PST
Comment on
attachment 295101
[details]
Added missing waitUntilDone
Attachment 295101
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2534036
New failing tests: fast/shadow-dom/focus-navigation-passes-shadow-host.html fast/shadow-dom/focus-navigation-out-of-slot.html fast/shadow-dom/focus-navigation-passes-svg-use-element.html
Build Bot
Comment 10
2016-11-17 17:17:57 PST
Created
attachment 295113
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Ryosuke Niwa
Comment 11
2016-11-17 19:12:07 PST
Created
attachment 295121
[details]
Skip the tests on iOS
WebKit Commit Bot
Comment 12
2016-11-19 00:02:11 PST
Comment on
attachment 295121
[details]
Skip the tests on iOS Clearing flags on attachment: 295121 Committed
r208922
: <
http://trac.webkit.org/changeset/208922
>
WebKit Commit Bot
Comment 13
2016-11-19 00:02:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug